--- a/features.ui
+++ b/features.ui
@@ -4,9 +4,16 @@
 	<!-- interface-requires gladevcp 0.0 -->
 	<!-- interface-naming-policy project-wide -->
 	<object class="GtkWindow" id="window1">
-		<property name="type_hint">combo</property>
-		<child>
-			<object class="GtkVBox" id="vbox2">
+    <property name="visible">True</property>
+    <property name="resizable">False</property>
+    <property name="accept_focus">False</property>
+    <property name="focus_on_map">False</property>
+    <property name="deletable">False</property>
+    <property name="gravity">north-east</property>
+    <property name="mnemonics_visible">False</property>
+	<property name="type_hint">combo</property>
+	<child>
+		<object class="GtkVBox" id="vbox2">
 				<property name="visible">True</property>
 				<child>
 					<object class="Features" id="features">
